전남대 BE_정호성 3주차 과제 (1단계) (#161)
* feat: jpa 의존성 추가

* feat: properties 작성

* docs: step1 readme 작성

* feat: MemberRepositoryTest 작성

* feat: Member -> Entity

* refactor: member getter 사용

* refactor: MemberRepository jpa

* refactor: MemberService 알맞게 변경

* feat: Product -> Entity

* refactor: product getter 사용

* refactor: ProductRepository jpa

* refactor: ProductService 알맞게 변경

* feat: Wish -> Entity

* refactor: wish getter 사용

* refactor: WishRepository jpa

* refactor: WishService 알맞게 변경

---------

Co-authored-by: yoong-saks <wjdghtjd06@gmail.com>