@@ -3,7 +3,9 @@ package gift.service.member;
 import gift.domain.member.Member;
 import gift.domain.member.MemberRepository;
 import gift.web.dto.MemberDto;
+import gift.web.exception.MemberNotFoundException;
 import java.util.List;
+import java.util.stream.Collectors;
 import org.springframework.stereotype.Service;
 
 
@@ -16,30 +18,33 @@ public class MemberService {
     }
 
     public List<MemberDto> getMembers() {
-        return List.copyOf(memberRepository.findAll()
-                .stream()
-                .map(MemberDto::from)
-                .toList()
-                );
+        return memberRepository.findAll()
+            .stream()
+            .map(MemberDto::from)
+            .collect(Collectors.toList());
     }
 
     public MemberDto getMemberByEmail(String email) {
-        return MemberDto.from(memberRepository.getMemberByEmail(email));
+        return memberRepository.findByEmail(email)
+            .map(MemberDto::from)
+            .orElseThrow(() -> new MemberNotFoundException("멤버가 엄슴다"));
     }
 
     public void createMember(MemberDto memberDto) {
-        MemberDto.from(memberRepository.insertMember(MemberDto.toEntity(memberDto)));
+        memberRepository.save(MemberDto.toEntity(memberDto));
     }
 
     public MemberDto updateMember(String email, MemberDto memberDto) {
-        memberRepository.getMemberByEmail(email);
+        memberRepository.findByEmail(email)
+            .orElseThrow(() -> new MemberNotFoundException("멤버가 없슴다."));
         Member newMember = MemberDto.toEntity(memberDto);
-        memberRepository.updateMember(newMember);
+        memberRepository.save(newMember);
         return MemberDto.from(newMember);
     }
 
     public void deleteMember(String email) {
-        memberRepository.getMemberByEmail(email);
-        memberRepository.deleteMember(email);
+        Member member = memberRepository.findByEmail(email)
+            .orElseThrow(() -> new MemberNotFoundException("멤버가 없슴다."));
+        memberRepository.delete(member);
     }
 }
